  as occurs within a flush operation; setting include_collections=False gives the same
  result as is used when the flush determines whether or not to issue an UPDATE for the
  instance's row.

- added "schema" argument to Sequence; use this with Postgres /Oracle when the sequence is
  located in an alternate schema.  Implements part of [ticket:584], should fix [ticket:761].
  
- Fixed reflection of the empty string for mysql enums.

- Added 'passive_deletes="all"' flag to relation(), disables all nulling-out
  of foreign key attributes during a flush where the parent object is
  deleted.

- the Session identity map is now *weak referencing* by default, use 
  weak_identity_map=False to use a regular dict.  The weak dict we are using
  is customized to detect instances which are "dirty" and maintain a temporary
  strong reference to those instances until changes are flushed.
  
- Column defaults and onupdates, executing inline, will add parenthesis for
  subqueries and other parenthesis-requiring expressions

- Fixes to ShardedSession to work with deferred columns [ticket:771].

- User-defined shard_chooser() function must accept "clause=None" argument;
  this is the ClauseElement passed to session.execute(statement) and can be
  used to determine correct shard id (since execute() doesn't take an
  instance.)

- Adjusted operator precedence of NOT to match '==' and others, so that 
  ~(x <operator> y) produces NOT (x <op> y), which is better compatible
  with older MySQL versions. [ticket:764].  This doesn't apply to "~(x==y)"
  as it does in 0.3 since ~(x==y) compiles to "x != y", but still applies
  to operators like BETWEEN.

- Other tickets: [ticket:768], [ticket:728], [ticket:779], [ticket:757]

0.4.0beta5
----------

- Connection pool fixes; the better performance of beta4 remains but fixes
  "connection overflow" and other bugs which were present (like
  [ticket:754]).
  
- Fixed bugs in determining proper sync clauses from custom inherit